# ArrProfileGenerator

./: .env.example  .gitignore  CLAUDE.md  CONFIGURATION_MATRIX.md  README.md  TEST_GUIDE.md  build.sh  build.spec  docker-compose.yml  import_from_live.py  pyproject.toml  requirements.txt  wizard.py
.github/workflows/: dependabot-linear.yml  release.yml
services/analyzer/: Dockerfile  requirements.txt
services/analyzer/src/: main.py  profiler.py
services/collector/: Dockerfile
services/collector/src/: backfill.py  categories.py  main.py  websocket_client.py
services/migrate/: Dockerfile  migrate.py
services/nfo-fetcher/: Dockerfile  requirements.txt
services/nfo-fetcher/src/: fetcher.py  main.py  nfo_parser.py
services/parser/: Dockerfile  requirements.txt
services/parser/src/: filters.py  main.py  processor.py
services/trash-importer/: Dockerfile
services/trash-importer/src/: main.py
services/web/: Dockerfile
services/web/src/: app.py
services/web/src/templates/: base.html  dashboard.html  group_detail.html  (+3 more)
services/wizard/: Dockerfile
services/wizard/src/: arr_client.py  main.py  profile_builder.py
shared/: pyproject.toml
shared/profsync/: config.py  db.py  logging.py  models.py  queue.py
src/: arr_client.py  main.py  profile_builder.py  questions.py  trash_fetcher.py
test/: README.md  cleanup-stack.sh  configure-auth.sh  docker-compose.yml  import-fixtures.sh  init-stack.sh  matrix_test.py  run-matrix.sh  run-wizard-noninteractive.py  validate-stack.sh  validate-wizard.sh
test/fixtures/: radarr-movies.json  sonarr-series.json
